// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeProvider should render 1`] = `
<div>
  Hello world
</div>
`;

exports[`styled should return a valid React component 1`] = `
<div
  className="sii-311768968"
>
  Hello world
</div>
`;
